sailfish-tests/integration-tests/tests/fails/no_path.stderr
error: `path` option must be specified.
 --> $DIR/no_path.rs:4:10
  |
4 | #[derive(TemplateOnce)]
  |          ^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `render_once` found for struct `NoTemplate` in the current scope
  --> $DIR/no_path.rs:10:45
   |
5  | struct NoTemplate {
   | ----------------- method `render_once` not found for this
...
10 |     println!("{}", NoTemplate { var: 1996 }.render_once().unwrap());
   |                                             ^^^^^^^^^^^ method not found in `NoTemplate`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `render_once`, perhaps you need to implement it:
           candidate #1: `TemplateOnce`

warning: unused import: `sailfish::TemplateOnce`
 --> $DIR/no_path.rs:1:5
  |
1 | use sailfish::TemplateOnce;
  |     ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
